--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lunch (0.4.0-1) lucid; urgency=low
+
+  * New upstream release
+
+ -- Alexandre Quessy <alexandre@quessy.net>  Thu, 02 Sep 2010 11:01:21 -0400
+
 lunch (0.3.5-1) lucid; urgency=low
 
   * New upstream release
